--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CSV Parser for Homework 1: Information Retrieval",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "",
   "license": "ISC"
